Add 'Allow Tool' popup for when high risk prompts were detected
